부산대 BE_김상해 4주차 과제(2단계) (#326)
* chore: lombok 추가

* refactor: 멤버 컨트롤러 리턴 타입 수정

- ResponseEntity<Map<String, Object>> 에서 ResponseEntity<ApiResponse>로 수정

* chore: 파일 포매팅

* chore: 파일 포매팅

* feat: 카테고리 DB 초기 데이터 생성

* feat: 카테고리 생성

* chore: 파일 포매팅

* chore: 파일포매팅

* chore: 파일 포매팅

* refactor: 리턴 타입 단일화

* feat: 옵션 레이어 생성

* feat: productBuilder 생성

* feat: product 레이어에 option 필드 추가

* refactor: 빈 카테고리는 검색이 되지 않도록 수정

* feat: 옵션 추가